<resources>
    <string name="app_name">TsykunovVkAppClient</string>
    <string name="splash">VkClient</string>
    <string name="profile_view">Просмотр профиля</string>
    <string name="profile_edit">Редактирование профиля</string>
    <string name="logout">Выход</string>
    <string name="login_enter">Войти</string>
    <string name="cancel">Отмена</string>
    <string name="save">Сохранить</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="remember_password">Значит вспоминайте.\nАккаунт для тестов 555/root</string>
    <string name="password">Пароль</string>
    <string name="account">Телефон или email</string>
    <string name="name">Имя:</string>
    <string name="surname">Фамилия:</string>
    <string name="birthday">День рождения:</string>
    <string name="city">Город:</string>
    <string name="edit_profile_success">Данные профиля успешно обновлены</string>
    <string name="edit_profile_failure">Не удалось обновить данные профиля</string>
    <string name="add_post_failure">Не удалось добавить запись</string>
    <string name="profile">Профиль</string>
    <string name="messages">Сообщения</string>
    <string name="news">Добавить</string>
    <string name="add_post">Добавить запись...</string>
    <string name="add">Добавить</string>

</resources>