<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools" android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
                android:id="@+id/profileViewToolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                app:title="@string/profile_edit"
                app:titleTextColor="@color/white"/>

    </com.google.android.material.appbar.AppBarLayout>
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <TextView
                    android:id="@+id/profileEditFirstName"
                    android:layout_width="wrap_content"
                    android:textSize="24sp"
                    android:layout_height="wrap_content"
                    android:text="@string/name"/>

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/profileEditFirstNameField"/>

            <TextView
                    android:id="@+id/profileEditSurname"
                    android:layout_width="wrap_content"
                    android:textSize="24sp"
                    android:layout_height="wrap_content"
                    android:text="@string/surname"/>

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/profileEditSurnameField"/>

            <TextView
                    android:id="@+id/profileEditBirthday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:text="@string/birthday"/>

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="date"
                    android:ems="10"
                    android:id="@+id/profileEditBirthdayField"/>

            <TextView
                    android:id="@+id/profileEditCity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:text="@string/city"/>

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/profileEditCityField"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <ProgressBar
                        style="?android:attr/progressBarStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/profile_edit_progressBar" app:layout_constraintEnd_toStartOf="@+id/profile_edit_cancel_btn"
                        android:layout_marginEnd="12sp" android:layout_marginTop="12dp"
                        app:layout_constraintTop_toTopOf="parent"
                        android:visibility="gone"/>
                <Button
                        android:text="@string/save"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/profile_edit_save_btn"
                        android:textAllCaps="false" android:textColor="@color/white"
                        android:background="@color/colorPrimary"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="12sp" android:layout_marginTop="12sp"
                        app:layout_constraintTop_toTopOf="parent"/>
                <Button
                        android:text="@string/cancel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/profile_edit_cancel_btn"
                        android:textAllCaps="false" android:textColor="@color/white"
                        android:background="@color/colorPrimary"
                        android:layout_marginBottom="12sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:layout_marginTop="12sp" app:layout_constraintTop_toTopOf="parent"
                        android:layout_marginEnd="12sp" app:layout_constraintEnd_toStartOf="@+id/profile_edit_save_btn"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>