<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                                   android:layout_height="match_parent">

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/account"
            android:ems="10"
            android:id="@+id/login_account" android:layout_marginStart="8sp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8sp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="96sp"
            app:layout_constraintTop_toTopOf="parent"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:ems="10"
            android:id="@+id/login_password"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8sp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8sp"
            app:layout_constraintTop_toBottomOf="@+id/login_account" android:layout_marginTop="24sp"/>
    <Button
            android:text="@string/login_enter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/login_enter_btn"
            app:layout_constraintTop_toBottomOf="@+id/login_password" android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@+id/login_password"
            android:textAllCaps="false" android:textColor="@color/white"
            android:background="@color/colorPrimary"/>
    <Button
            android:text="@string/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/login_forgot_password_btn"
            app:layout_constraintEnd_toEndOf="@+id/login_password"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/login_password"
            android:textAllCaps="false" android:textColor="@color/white"
            android:background="@color/colorPrimary"/>
    <Button
            android:text="Custom V"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/login_custom_view_btn" app:layout_constraintStart_toStartOf="@+id/login_enter_btn"
            app:layout_constraintEnd_toEndOf="@+id/login_enter_btn" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/login_enter_btn" android:textAllCaps="false"/>
</androidx.constraintlayout.widget.ConstraintLayout>