<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools" android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent" android:id="@+id/linearLayout">

    <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
                android:id="@+id/profileViewToolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                app:title="@string/add_post"
                app:titleTextColor="@color/white"/>

    </com.google.android.material.appbar.AppBarLayout>
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:id="@+id/scrollView2">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:id="@+id/addPostTextField"/>

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:id="@+id/addPostTextFieldPic"
                    android:visibility="gone"
                    android:text="https://tinyjpg.com/images/social/website.jpg"/>
            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <ImageView
                        android:layout_width="87dp"
                        android:layout_height="66dp" app:srcCompat="@drawable/ic_image"
                        android:id="@+id/addPostPicImageView"
                        android:layout_marginBottom="0dp" app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="0dp"
                        android:contentDescription="AddImage"/>
                <ProgressBar
                        style="?android:attr/progressBarStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/add_post_progressBar"
                        app:layout_constraintEnd_toStartOf="@+id/addPost_cancel_btn"
                        android:layout_marginEnd="12sp" android:layout_marginTop="12dp"
                        app:layout_constraintTop_toTopOf="parent"
                        android:visibility="gone"/>
                <Button
                        android:text="@string/add"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/addPost_btn"
                        android:textAllCaps="false" android:textColor="@color/white"
                        android:background="@color/colorPrimary"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="12sp" android:layout_marginTop="12sp"
                        app:layout_constraintTop_toTopOf="parent"/>
                <Button
                        android:text="@string/cancel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/addPost_cancel_btn"
                        android:textAllCaps="false" android:textColor="@color/white"
                        android:background="@color/colorPrimary"
                        android:layout_marginBottom="12sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:layout_marginTop="12sp" app:layout_constraintTop_toTopOf="parent"
                        android:layout_marginEnd="12sp" app:layout_constraintEnd_toStartOf="@+id/addPost_btn"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>